updates and changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=ResinJewelryStoreApplication
 
-spring.datasource.url= jdbc:mysql://localhost:3306/security_demo_db_08
+spring.datasource.url= jdbc:mysql://localhost:3306/resin_db
 spring.datasource.username= root
-spring.datasource.password=root
+spring.datasource.password=Adry&Sky2021!
 
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
