--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,15 @@
 spring.application.name=ResinJewelryStoreApplication
 
 spring.datasource.url= jdbc:mysql://localhost:3306/resin_db
-spring.datasource.username= root
-spring.datasource.password=Adry&Sky2021!
+spring.datasource.username=root
+spring.datasource.password=root
 
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
+
+spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+#spring.datasource.url=jdbc:h2:mem:demoh2db
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
